profiling word length amazon

--- a/Profiling/stats_amazon_movies_tv.ipynb
+++ b/Profiling/stats_amazon_movies_tv.ipynb
@@ -310,66 +310,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "word length between 0 and 4:  2813\n",
-      "word length between 5 and 10:  4860\n",
-      "word length between 10 and 20:  54951\n",
-      "word length between 20 and 50:  520832\n",
-      "word length between 50 and 100:  328357\n",
-      "word length between 100 and 200:  337713\n",
-      "word length between 200 and 300:  175482\n",
-      "word length between 300 and 400:  100729\n",
-      "word length between 400 and 500:  61287\n",
-      "word length between 500 and 600:  38486\n",
-      "word length between 600 and 700:  23711\n",
-      "word length between 700 and 800:  14776\n",
-      "word length between 800 and 900:  10029\n",
-      "word length between 900 and 1000:  7895\n",
-      "word length between 1000 and 2000:  13334\n",
-      "word length between 2000 and 3000:  791\n",
-      "word length between 3000 and 4000:  204\n",
-      "word length between 4000 and 5000:  75\n",
-      "word length between 5000 and 6000:  25\n",
-      "word length between 6000 and 7000:  1\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('word length between 0 and 4: ', len(df[(df['word_count']<=4)]))\n",
-    "print('word length between 5 and 10: ',len(df[(df['word_count']>4) & (df['word_count']<=10)]))\n",
-    "print('word length between 10 and 20: ',len(df[(df['word_count']>10) & (df['word_count']<=20)]))\n",
-    "print('word length between 20 and 50: ',len(df[(df['word_count']>20) & (df['word_count']<=50)]))\n",
-    "print('word length between 50 and 100: ',len(df[(df['word_count']>50) & (df['word_count']<=100)]))\n",
-    "print('word length between 100 and 200: ',len(df[(df['word_count']>100) & (df['word_count']<=200)]))\n",
-    "print('word length between 200 and 300: ',len(df[(df['word_count']>200) & (df['word_count']<=300)]))\n",
-    "print('word length between 300 and 400: ',len(df[(df['word_count']>300) & (df['word_count']<=400)]))\n",
-    "print('word length between 400 and 500: ',len(df[(df['word_count']>400) & (df['word_count']<=500)]))\n",
-    "print('word length between 500 and 600: ',len(df[(df['word_count']>500) & (df['word_count']<=600)]))\n",
-    "print('word length between 600 and 700: ',len(df[(df['word_count']>600) & (df['word_count']<=700)]))\n",
-    "print('word length between 700 and 800: ',len(df[(df['word_count']>700) & (df['word_count']<=800)]))\n",
-    "print('word length between 800 and 900: ',len(df[(df['word_count']>800) & (df['word_count']<=900)]))\n",
-    "print('word length between 900 and 1000: ',len(df[(df['word_count']>900) & (df['word_count']<=1000)]))\n",
-    "print('word length between 1000 and 2000: ',len(df[(df['word_count']>1000) & (df['word_count']<=2000)]))\n",
-    "print('word length between 2000 and 3000: ',len(df[(df['word_count']>2000) & (df['word_count']<=3000)]))\n",
-    "print('word length between 3000 and 4000: ',len(df[(df['word_count']>3000) & (df['word_count']<=4000)]))\n",
-    "print('word length between 4000 and 5000: ',len(df[(df['word_count']>4000) & (df['word_count']<=5000)]))\n",
-    "print('word length between 5000 and 6000: ',len(df[(df['word_count']>5000) & (df['word_count']<=6000)]))\n",
-    "print('word length between 6000 and 7000: ',len(df[(df['word_count']>6000) & (df['word_count']<=7000)]))\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
@@ -415,7 +355,21 @@
    "outputs": [],
    "source": [
     "amounts = data.values\n",
-    "print(amounts)"
+    "print(amounts)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "df['unixReviewTime'].count()"
    ],
    "metadata": {
     "collapsed": false,
