--- a/ComparisonExperiments/Movie_NB.ipynb
+++ b/ComparisonExperiments/Movie_NB.ipynb
@@ -6,7 +6,7 @@
    "outputs": [],
    "source": [
     "import gzip, json, random, pandas as pd\n",
-    "from Preprocessing import preprocessing as prep\n",
+    "from Scripts import preprocessing as prep\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.naive_bayes import MultinomialNB, GaussianNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
