--- a/ComparisonExperiments/onlyAmazonCell.ipynb
+++ b/ComparisonExperiments/onlyAmazonCell.ipynb
@@ -304,8 +304,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'prep' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-1-1dec2012d9b8>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[1;31m# WITH PREPROCESSING AND FEATURE SELECTION\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m----> 2\u001B[1;33m \u001B[0mclean_text\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mprep\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mpreprocess_reviews\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mama_df\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;34m'reviewText'\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      3\u001B[0m \u001B[0mvectorizer\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mCountVectorizer\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mngram_range\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;36m1\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;36m3\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0mtext_count\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mvectorizer\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mfit_transform\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mclean_text\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[1;31m# ros = RandomOverSampler(random_state=777)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'prep' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# WITH PREPROCESSING AND FEATURE SELECTION\n",
     "clean_text = prep.preprocess_reviews(ama_df['reviewText'])\n",
@@ -337,13 +349,13 @@
     "                                      display_labels=[1.0, 2.0, 3.0, 4.0, 5.0],\n",
     "                                      cmap=plt.cm.Blues,\n",
     "                                      normalize='true')\n",
-    "vocab_4 = vectorizer.get_feature_names()"
+    "vocab_4 = vectorizer.get_feature_names()\n",
+    "print(metrics.mean_squared_error)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
