--- a/ComparisonExperiments/onlyAmazonMovie.ipynb
+++ b/ComparisonExperiments/onlyAmazonMovie.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import gzip, json, random, pandas as pd\n",
-    "from Preprocessing import preprocessing as prep\n",
+    "from Preprocessing import preprocessing as prep, cleaning as clean\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn import model_selection\n",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "amazon_input = '../Data/reviews_Movies_and_TV_5.json.gz'\n",
@@ -39,14 +39,111 @@
     "with gzip.open(amazon_input) as f:\n",
     "    for l in f:\n",
     "        data.append(json.loads(l.strip()))\n",
-    "df = pd.DataFrame.from_dict(data)\n",
-    "ama_df = df[['reviewText', 'overall']]"
+    "df = pd.DataFrame.from_dict(data)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "1697533"
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ama_df = df[['reviewText', 'overall']]\n",
+    "len(ama_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before deleting duplicate entries:  1697533\n",
+      "After deleting duplicate entries:  1697533\n"
+     ]
+    }
+   ],
+   "source": [
+    "ama_df = clean.remove_duplicates(ama_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'head'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-27-6df52b3f6623>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[0mama_df\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mhead\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m",
+      "\u001B[1;31mAttributeError\u001B[0m: 'NoneType' object has no attribute 'head'"
+     ]
+    }
+   ],
+   "source": [
+    "ama_df.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "ama_df = clean.remove_dup_text(ama_df)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -83,8 +180,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
