--- a/ComparisonExperiments/onlyAmazonCell.ipynb
+++ b/ComparisonExperiments/onlyAmazonCell.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "import gzip, json, random, pandas as pd\n",
-    "from Preprocessing import preprocessing as prep\n",
+    "from Scripts import preprocessing as prep\n",
     "from imblearn.over_sampling import RandomOverSampler, SMOTE\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn import model_selection\n",
@@ -21,6 +21,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.svm import SVC, LinearSVC\n",
     "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "\n",
     "from sklearn.feature_selection import chi2, SelectKBest, f_classif, f_regression, mutual_info_classif\n",
     "from sklearn.model_selection import train_test_split\n",
     "from collections import Counter\n",
@@ -1414,7 +1415,7 @@
     "models.append(('GNB', GaussianNB()))\n",
     "models.append(('RND', RandomForestClassifier()))\n",
     "models.append(('SVM', LinearSVC(multi_class=\"crammer_singer\")))\n",
-    "models.append(('SVC', SVC(decision_function_shape='ovr')))\n",
+    "models.append(('SVC', SVC(decision_function_shape='ovr', kernel='poly')))\n",
     "\n",
     "results = []\n",
     "names = []\n",
