--- a/ComparisonExperiments/onlyAmazonMovie.ipynb
+++ b/ComparisonExperiments/onlyAmazonMovie.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import gzip, json, random, pandas as pd\n",
-    "from Preprocessing import preprocessing as prep, cleaning as clean\n",
+    "from Scripts import preprocessing as prep, cleaning as clean, loading as dl\n",
     "from imblearn.under_sampling import RandomUnderSampler\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn import model_selection\n",
