--- a/Profiling/durchlauf_cellphones_accessories.ipynb
+++ b/Profiling/durchlauf_cellphones_accessories.ipynb
@@ -647,12 +647,12 @@
     }
    ],
    "source": [
-    "print(len(corpus.unique())) #75030\n",
-    "print(len(corpus_1.unique())) #17881\n",
-    "print(len(corpus_2.unique())) #18153\n",
-    "print(len(corpus_3.unique())) #24682\n",
-    "print(len(corpus_4.unique()) )#35431\n",
-    "print(len(corpus_5.unique())) #52175"
+    "print(\"Amount of unique tokens for all classes: \", len(corpus.unique())) #75030\n",
+    "print(\"Amount of unique tokens for class 1: \", len(corpus_1.unique())) #17881\n",
+    "print(\"Amount of unique tokens for class 2: \", len(corpus_2.unique())) #18153\n",
+    "print(\"Amount of unique tokens for class 3: \", len(corpus_3.unique())) #24682\n",
+    "print(\"Amount of unique tokens for class 4: \", len(corpus_4.unique()) )#35431\n",
+    "print(\"Amount of unique tokens for class 5: \", len(corpus_5.unique())) #52175"
    ],
    "metadata": {
     "collapsed": false,
