--- a/10_Transition&Cleaning/amazon_movie_topkl.ipynb
+++ b/10_Transition&Cleaning/amazon_movie_topkl.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    },
    "outputs": [
@@ -14,6 +15,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "######## FIRST GENERAL INSIGHT\n",
       "                                                text  label\n",
       "0  This is a charming version of the classic Dick...    4.0\n",
       "1  It was good but not as emotionally moving as t...    3.0\n",
@@ -36,43 +38,30 @@
       "75%         NaN  5.000000e+00\n",
       "max         NaN  5.000000e+00\n",
       "######## DATA COMPLETENESS\n",
-      "Missing review data: 62\n",
-      "Missing review data as percentage: 0.00365% \n",
+      "Missing/Empty review text: 62\n",
+      "Missing review text as percentage: 0.00% \n",
       "Missing rating information 0\n",
       "Missing rating information as percentage: 0.00%\n",
-      "After removing missing text and ratings:  1697471\n",
+      "After removing implictly missing rating information:  1697471\n",
       "######## DUPLICATE DETECTION\n",
-      "Duplicate text:  1120\n",
+      "Duplicate text: 1120\n",
       "Duplicate text: 0.07%\n",
-      "Duplicate textand label:  973\n",
+      "Duplicate text and label: 973\n",
       "Duplicate text and label from reviews without missing information: 0.06%\n",
       "After removing duplicate entries and texts:  1696351\n",
       "######## LINGUISTIC AFFILIATION\n",
       "exception: :)\n",
-      "exception: ********* **** ********* *** ***** ****** ***** ****** ****** ******* ********** *********** ****** ****** *****  ***** **** **** ****** ****** *******\n",
-      "exception: ........ ...... .. . .... ... ...... ..... ... .... .... ..... .. .. .. .. .. .. .. .. .. ... .. .. .. .. .. .. .. . ... .. ... .... ... ... . ..... ... ... ... ... ... .\n",
-      "After removing non-english text: 1693052\n",
-      "######## OTHER HEURISTICS\n",
-      "After removing from other cleaning heuristics:  1693051\n",
-      "######## STORING\n",
-      "to pickle done\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\d064966\\appdata\\local\\continuum\\anaconda3\\envs\\masterthesis\\lib\\site-packages\\pandas\\core\\strings.py:2001: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
-      "  return func(self, *args, **kwargs)\n"
+      "exception: ********* **** ********* *** ***** ****** ***** ****** ****** ******* ********** *********** ****** ****** *****  ***** **** **** ****** ****** *******\n"
      ]
     }
    ],
    "source": [
-    "from Scripts import loading as dl, profiling as pf, cleaning as cl\n",
+    "from Scripts import loading as dl, profiling as pf, cleaning as cl, preprocessing as prep\n",
     "\n",
     "\n",
     "input_link = '../Data/reviews_Movies_and_TV_5.json.gz'\n",
     "df = dl.load_amazon_full(input_link)\n",
+    "\n",
     "\n",
     "print('######## FIRST GENERAL INSIGHT')\n",
     "print(df.head())\n",
@@ -91,23 +80,71 @@
     "df = cl.drop_duplicates(df)\n",
     "\n",
     "\n",
-    "# LINGUISTIC AFFILIATION\n",
     "print('######## LINGUISTIC AFFILIATION')\n",
     "df = cl.remove_non_english(df)\n",
-    "pf.show_lang_dist(df, 'amazon_movie_lang_non_eng_dist', 'non-English Language Distribution (Amazon Movies & TV)', 0)\n",
-    "pf.show_lang_dist(df, 'amazon_movie_lang_all_dist', 'Language Distribution (Amazon Movies & TV)', 1)\n",
+    "# pf.show_lang_dist(df, 'amazon_movie_lang_non_eng_dist', 'non-English Language Distribution (Amazon Movies & TV)', 0)\n",
+    "# pf.show_lang_dist(df, 'amazon_movie_lang_all_dist', 'Language Distribution (Amazon Movies & TV)', 1)\n",
     "\n",
     "\n",
-    "# OTHER HEURISTICS: based on exceptions\n",
     "print('######## OTHER HEURISTICS')\n",
     "df = df[~df.text.str.contains(r'^&#((15|16|20)[0-9]{2,3});*')]\n",
     "print('After removing from other cleaning heuristics: ', len(df))\n",
     "\n",
     "\n",
-    "# STORING VIA PICKLING\n",
+    "print('######## PREPROCESSING')\n",
+    "print('######## Web Data Specific')\n",
+    "df = prep.remove_html(df)\n",
+    "df = prep.remove_hyperlinks(df)\n",
+    "df = prep.remove_between_square_brackets(df)\n",
+    "df = prep.remove_between_angle_brackets(df)\n",
+    "df = prep.unescape(df)\n",
+    "df = prep.remove_whitespaces(df)\n",
+    "df = prep.remove_lang_ind(df)\n",
+    "\n",
+    "print('######## Text Harmonization')\n",
+    "df = prep.replace_contractions(df)\n",
+    "df = prep.remove_accented_chars(df)\n",
+    "df = prep.to_token(df)\n",
+    "total_token_count = pf.get_total_token_count(df)\n",
+    "print(total_token_count)\n",
+    "df = prep.transform_abbr(df)\n",
+    "df = prep.remove_numbers(df)\n",
+    "df = prep.remove_punct_and_nonascii(df)\n",
+    "df = prep.to_lower(df)\n",
+    "df = prep.remove_stopwords(df)\n",
+    "df = prep.get_pos(df)\n",
+    "\n",
+    "print('######## Text Canonicalization')\n",
+    "df = prep.stem(df)\n",
+    "\n",
+    "pf.get_prep_summary(df, total_token_count)\n",
+    "\n",
+    "df = prep.detokenize(df)\n",
+    "\n",
+    "print('######## DATA COMPLETION AFTER PREPROCESSING')\n",
+    "total_prep = len(df)\n",
+    "df_empty = df[df.text_prep=='']\n",
+    "print(\"Empty preprocessed text:\", len(df_empty))\n",
+    "print(\"Duplicate preprocessed text: {:.2%}\".format(len(df_empty) / total_prep))\n",
+    "df = df[df.text_prep!='']\n",
+    "print(\"After removing empty preprocessed texts: \", len(df))\n",
+    "\n",
+    "print('######## DEDUPLICATION AFTER PREPROCESSING')\n",
+    "df_dup = df[df.duplicated(subset=['text_prep'], keep='last')]\n",
+    "print(\"Duplicate preprocessed text:\", len(df_dup))\n",
+    "print(\"Duplicate preprocessed text: {:.2%}\".format(len(df_dup) / total_prep))\n",
+    "df = df.drop_duplicates(subset=['text_prep'], keep='last')\n",
+    "print(\"After removing duplicate preprocessed texts: \", len(df))\n",
+    "\n",
+    "\n",
+    "print('######### LAST CHECK')\n",
+    "print(df.head())\n",
+    "print(df.describe(include='all'))\n",
+    "\n",
+    "\n",
     "print('######## STORING')\n",
-    "# Finally keeping only the wanted properties\n",
-    "df = df[['text', 'label']]\n",
+    "df = df[['text','label', 'text_prep', 'token_count', 'upper', 'pos']]\n",
+    "df.columns=['text', 'label', 'text_prep', 'token_count', 'upper', 'pos']\n",
     "df.to_pickle('../Data/amazon_movie.pkl')\n",
     "print('to pickle done')\n",
     "\n"
