--- a/BaselineExperiments/Untitled.ipynb
+++ b/BaselineExperiments/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-09-05T07:24:34.513623Z",
@@ -11,6 +11,7 @@
    },
    "outputs": [],
    "source": [
+    "from Scripts import loading as dl\n",
     "import gzip, json, pandas as pd, re, numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from collections import Counter\n",
@@ -54,145 +55,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "                                          reviewText  overall\n0  They look good and stick good! I just don't li...      4.0\n1  These stickers work like the review says they ...      5.0\n2  These are awesome and make my phone look so st...      5.0\n3  Item arrived in great time and was in perfect ...      4.0\n4  awesome! stays on, and looks great. can be use...      5.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>reviewText</th>\n      <th>overall</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>They look good and stick good! I just don't li...</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>These stickers work like the review says they ...</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>These are awesome and make my phone look so st...</td>\n      <td>5.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Item arrived in great time and was in perfect ...</td>\n      <td>4.0</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>awesome! stays on, and looks great. can be use...</td>\n      <td>5.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(194439, 2)"
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape\n",
-    "\n",
-    "# filtern nach anzahl der Wörter müssen mehr als 5 sein, damit es als eine valide Review\n",
-    "# + gleiche reviewtexte auch rausfiltern"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 286,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                               reviewText  overall\n",
-      "656     I bought a similar one @ a local store & was s...      5.0\n",
-      "834     My previous two PalmOS phones were a Kyocera 6...      4.0\n",
-      "855     I bought this item @ a local retailer, was hap...      1.0\n",
-      "1298    Update 11/11/2008My wife's died about two week...      5.0\n",
-      "2000    First, the ear clip snapped around the clip th...      2.0\n",
-      "...                                                   ...      ...\n",
-      "190717  Seemed to work well for a while (6 weeks or so...      5.0\n",
-      "191490  Companies are definitely stepping up to the pl...      5.0\n",
-      "193426  Lepow battery banks always impress me with the...      5.0\n",
-      "193748  A review of the \"Bolse 25W (5V/5A) 4-Port USB ...      5.0\n",
-      "194298  In a crowded market of multiport USB chargers ...      5.0\n",
-      "\n",
-      "[346 rows x 2 columns]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# emoticons\n",
-    "# dirty = df[df['reviewText'].str.contains('\\:\\-\\)')]\n",
-    "# dirty = df[df['reviewText'].str.contains('.-')]\n",
-    "# dirty = df[df['reviewText'].str.contains('\\/n')]\n",
-    "# dirty = df[df['reviewText'].str.contains('&#8217')] #, e.g. 757 - done\n",
-    "# dirty = df[df['reviewText'].str.contains('00')] #, e.g. $20.00 - done\n",
-    "# dirty = df[df['reviewText'].str.contains('couldn\\'t')]\n",
-    "dirty = df[df['reviewText'].str.contains('@')]\n",
-    "# dirty = df[df['reviewText'].str.contains('JUNK')]\n",
-    "# dirty = df[df['reviewText'].str.contains('u\"hello world')]\n",
-    "print(dirty)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 257,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "\"I have been itching for a Treo ever since the 600 came out and I noticed that more streamlined design.  When smartphones were first introduced, I bucked the trend of combining the two thinking that as often as I use my cell phone and my pda, if I bought one that integrated both I would wear it out twice as fast.  And in my humble opinion, it was a valid reason because back then, the original phone/pda's were impossibly large.  Well I have finally become a convert.I spent a great deal of time researching Blackberry's vs. the Treo's vs. Pocket PC's and came VERY close to grabbing a T-Mobile Dash (which I still believe is the all-around smallest model availabe as I write this, or at least it SEEMED to be), but I finally settled with the trusted Palm OS platform (one that I have become VERY familiar with over the years using pda's for quite some time now).  When I set out to get one, I really had my heart set on the Treo 680...but as I read the reviews for them, one thing kept creeping in to almost all the reviews: battery life was terrible.  With that aside, quite a few of the reviewers mentioned that all things considered, they were more happy with their old 650.  I saw this on so MANY reviews that I began to think twice.  Then I noticed that the 700p was a more beefed up version of the 650, and began to consider it as well.  Unfortunately as I write this, it isn't available with Alltell service where I am (it will, but nobody can give me a target date, and dang it, I am too impatient to wait...) so I am right back with the 650.  It took a while before Palm was able to knock enough of the bugs out of the 650 that I felt like buying one would be worth it...and I am discovering more than a few bugs have been associated with both the 680 & 700p, so no matter HOW much time I spend considering upgrading to a newer model, I find compelling reasons to go right back to the Old School 650.Reason #1 to go with it: Since it is no longer available at Palm's Official website, and with the newer models coming out, chances are you can find some pretty sweet deals on the older 650.Reason #2: Virtually ALL of the problems originally associated with the 650 have been eliminated.  You want Push email?  You can get it.  You want web surfing?  No prob.  You want to view AND edit MS Word Documents and Excell?  Easier than ever with the 650 (that was one major plus over most of the Pocket PC's and ALL of the Blackberrys -- sure you can VIEW some of these documents, but you cannot EDIT them, too).Reason #3: No matter HOW convenient the pda, I found it next to impossible to give up a touch-screen's amazing versatility and the ease with which you can use it to edit things and connect on websites.One more important item to factor in when considering buying a 650: With the popularity with ever increasing wireless downloading speeds, I was afraid that the slower Treo would make internet surfing next to impossible because of the archaic speeds with which you are forced to endure.  I was VERY pleastantly surprised that downloading web pages did not take as long as I was at first expecting.  I have to tell you, after experimenting with the supposedly MUCH faster 700p with another online carrier than the one I was using (I won't say which, but they really did their best to tell me the 650 was slower than a dial-up modem from 1985), anyway, the 650 was only SLIGHTLY slower than this screaming fast 700p or the 700w.  I figured that was something I could live with to be honest.  Hey, it's a tiny hand-held device that allows me to send and receive email and surf the web...I'm still amazed that something like this exists at ALL to be honest with you...so downloading speed is still secondary in my opinion.  If speed really IS on your list of absolutes, maybe you ought to move up to something else...but keep in mind, it is only BARELY faster than what I experienced first hand.One more thing: the screen is amazing.  There are only so many ways to say WOW.  If you are considering buying a Palm that runs Windows Mobile, you ought to know that the screen clarity is almost reduced by HALF.  This apparently has something to do with Window's OS, and seriously put my decision to buy one on the back burner.Sure there are things that a smartphone cannot as yet do without some difficulty or impossibility...but that is the same with ALL current models.  Do some SERIOUS research into what you want vs. what you NEED and make an informed decision only AFTER you have had the chance to go into a store and test a specific model PERSONALLY.  Do that and no matter WHAT you decide on, you will most likely be happy.  So far, I know I am VERY satisfied with my choice.  Good luck on yours.***UPDATE***I opted not to get a Bluetooth hands-free device -- at first.  Originally I would see people walking around with these Lt. Uhura type thingy's sticking out of their ears and I couldn't help but wonder how lazy people are that they cannot raise their hand up to their head while walking around simply to talk on the phone.  For the most part I STILL feel this way, but I decided to buy a Bluetooth hands-free headset for while I am driving.  I cannot afford to miss calls, and being in radio, when not at work or home I can be found in my car monitoring the radio virtually 100% of the time and unfortunately this means I sometimes cannot hear the ringer.  The tethered device that came with the phone is certainly loud enough, but simply did not fit my ear (it kept falling out).  I bought a replacement that came with a variable size adapter and yet while it FIT better, the sound was almost impossible to hear (the worst I have ever experienced, actually).  So I took the plunge knowing full-well that the Palm Treo has a somewhat problematic history using these devices...so I made sure that I had an iron-clad return policy in place and jumped in.  It took me no more than a minute to configure my head-set and I went ahead and made a test call which had more than enough volume -- in fact it had plenty to spare.  All in all I am VERY satisfied with the performance. (I bought a Keycera Bluetooth, if that means anything)One additional item that requires mentioning: I currently have call-waiting as a service with my Treo and yet I have missed at least 3 calls (that I know of).  This particular feature does not seem to be supported by the 650...and IF it is, I have yet to discover any useful info regarding the problem, whether online or in the bible-sized instruction manual.  I will keep looking and IF I find a solution I will quickly report it here asap.  Just one more thing to think about.  Otherwise, I am amazingly satisfied with my Treo otherwise.  The ONLY thing I wish (other than user-friendly call-waiting) is faster downloads while online.  That is supposedly possible with the newer models using EVDO and yet the 700p I tested failed to work only slightly faster than my 650.  Maybe it was the network -- but not according to them (no surprise there).  I still think my purchase was WELL worth it.\""
-     },
-     "execution_count": 257,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "'\"It has been heard that Mobilink; one of the leading telecommunication brands of Pakistan is now launching its 3G phones with extremely low price with awesome specs. Although the date of launch has not been announced yet, but it is expected to be within few days. According to some hints&hellip;\"@en-US'\n",
-    "\n",
-    "\n",
-    "df.loc[1178]['reviewText']"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "outputs": [],
    "source": [
-    "stops = stopwords.words('english')\n",
-    "stops.append('I')\n",
-    "stops = [e for e in stops if e not in ('but', 'no', 'not')]"
+    "amazon_link = '../Data/amazon_movie.pkl'\n",
+    "df = dl.load_sampled(amazon_link, 10000)\n"
    ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 288,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -641,9 +508,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "anh.head()"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
