--- a/BaselineExperiments/nltk_moviereviews.ipynb
+++ b/BaselineExperiments/nltk_moviereviews.ipynb
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
@@ -321,7 +321,9 @@
       "destabil\n",
       "destin\n",
       "care\n",
-      "gone\n"
+      "gone\n",
+      "not\n",
+      "no\n"
      ]
     }
    ],
@@ -340,7 +342,9 @@
     "print(ps.stem(\"destabile\"))\n",
     "print(ps.stem(\"destination\"))\n",
     "print(ps.stem(\"caring\"))\n",
-    "print(ps.stem(\"gone\"))\n"
+    "print(ps.stem(\"gone\"))\n",
+    "print(ps.stem(\"not\"))\n",
+    "print(ps.stem(\"no\"))\n"
    ],
    "metadata": {
     "collapsed": false,
