--- a/10_Transition&Cleaning/amazon_movie_topkl.ipynb
+++ b/10_Transition&Cleaning/amazon_movie_topkl.ipynb
@@ -51,7 +51,123 @@
       "After removing duplicate entries and texts:  1696351\n",
       "######## LINGUISTIC AFFILIATION\n",
       "exception: :)\n",
-      "exception: ********* **** ********* *** ***** ****** ***** ****** ****** ******* ********** *********** ****** ****** *****  ***** **** **** ****** ****** *******\n"
+      "exception: ********* **** ********* *** ***** ****** ***** ****** ****** ******* ********** *********** ****** ****** *****  ***** **** **** ****** ****** *******\n",
+      "exception: ........ ...... .. . .... ... ...... ..... ... .... .... ..... .. .. .. .. .. .. .. .. .. ... .. .. .. .. .. .. .. . ... .. ... .... ... ... . ..... ... ... ... ... ... .\n",
+      "en    1693063\n",
+      "de        758\n",
+      "es        700\n",
+      "af        344\n",
+      "fr        227\n",
+      "so        120\n",
+      "ro        104\n",
+      "it        100\n",
+      "ca         93\n",
+      "no         93\n",
+      "cy         89\n",
+      "pt         89\n",
+      "nl         71\n",
+      "da         64\n",
+      "sk         63\n",
+      "sl         62\n",
+      "tl         44\n",
+      "et         40\n",
+      "vi         40\n",
+      "id         35\n",
+      "pl         32\n",
+      "sq         28\n",
+      "hr         17\n",
+      "hu         14\n",
+      "tr         13\n",
+      "fi         12\n",
+      "sv         10\n",
+      "sw          8\n",
+      "cs          7\n",
+      "lt          5\n",
+      "lv          3\n",
+      "Name: LANGUAGE, dtype: int64\n",
+      "After removing non-english text: 1693063\n",
+      "######## OTHER HEURISTICS\n",
+      "After removing from other cleaning heuristics:  1693062\n",
+      "######## PREPROCESSING\n",
+      "######## Web Data Specific\n",
+      "removed html tags\n",
+      "removed hyperlinks\n",
+      "removed content between square brackets\n",
+      "removed content between angle brackets\n",
+      "html unescape done\n",
+      "white space removal done\n",
+      "language indicator removal done\n",
+      "######## Text Harmonization\n",
+      "contractions expansion done\n",
+      "removed accented characters\n",
+      "tokenization done\n",
+      "316192659\n",
+      "abbreviation transformation done\n",
+      "number removal done\n",
+      "Token Count:  314995423\n",
+      "punctuation and non-ascii removal done\n",
+      "Token Count:  282167885\n",
+      "######## LOWERCASING STATISTICS\n",
+      "Amount of All Capitals words: 4431624\n",
+      "     Word  Frequency\n",
+      "0     DVD     422420\n",
+      "1       A     378088\n",
+      "2     THE     136797\n",
+      "3      TV     123630\n",
+      "4       D      52377\n",
+      "5       S      49237\n",
+      "6       B      48065\n",
+      "7      OF      46793\n",
+      "8     AND      44979\n",
+      "9     NOT      36877\n",
+      "10      O      36874\n",
+      "11   THIS      34047\n",
+      "12     IS      33830\n",
+      "13     IT      31232\n",
+      "14    VHS      29854\n",
+      "15     TO      29511\n",
+      "16      X      28094\n",
+      "17     II      27472\n",
+      "18      C      24593\n",
+      "19      R      24427\n",
+      "20      T      24392\n",
+      "21     US      24237\n",
+      "22     IN      23070\n",
+      "23    CGI      22192\n",
+      "24      J      22087\n",
+      "25     HD      19642\n",
+      "26  MOVIE      19619\n",
+      "27     OK      18993\n",
+      "28      L      17701\n",
+      "29      H      17293\n",
+      "30      E      17282\n",
+      "31      M      17160\n",
+      "32    ALL      16637\n",
+      "33    YOU      15953\n",
+      "34    WWE      15666\n",
+      "35   THAT      15448\n",
+      "36   LOVE      14708\n",
+      "37      G      14677\n",
+      "38  GREAT      14594\n",
+      "39    WAS      14521\n",
+      "40      P      14479\n",
+      "41    FOR      13924\n",
+      "42      K      13901\n",
+      "43      F      13152\n",
+      "44    BUT      13144\n",
+      "45   VERY      12937\n",
+      "46      W      12775\n",
+      "47     ON      12669\n",
+      "48      V      12649\n",
+      "49    BBC      12309\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\users\\d064966\\appdata\\local\\continuum\\anaconda3\\envs\\masterthesis\\lib\\site-packages\\pandas\\core\\strings.py:2001: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "  return func(self, *args, **kwargs)\n"
      ]
     }
    ],
