--- a/BaselineExperiments/Untitled.ipynb
+++ b/BaselineExperiments/Untitled.ipynb
@@ -794,9 +794,247 @@
    ],
    "source": [
     "print(vector)\n",
-    "\n",
     "\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "text = prep.preprocess_reviews(df.text)\n",
+    "target = df.label"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(text, target, test_size=0.25,random_state=7, stratify=df.label)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print('Training target statistics: {}'.format(Counter(y_train), sorted(y_train)))\n",
+    "print('Testing target statistics: {}'.format(Counter(y_test), sorted(y_test)))\n",
+    "vectorizer = TfidfVectorizer(min_df=5,max_df=0.9, ngram_range=(1,3))\n",
+    "train_vectorized = vectorizer.fit_transform(X_train)\n",
+    "test_vectorized = vectorizer.transform(X_test)\n",
+    "\n",
+    "vectorizer_fs = SelectKBest(score_func=f_classif, k=1000)\n",
+    "fs_train_vectorized = vectorizer_fs.fit_transform(train_vectorized,y_train)\n",
+    "fs_test_vectorized = vectorizer_fs.transform(test_vectorized)\n",
+    "clf = LogisticRegression(C=1.0, dual=False, fit_intercept=True, random_state=0, solver='lbfgs', intercept_scaling=1, max_iter=100, multi_class='multinomial', class_weight='balanced')\n",
+    "clf.fit(fs_train_vectorized, y_train)\n",
+    "y_pred = clf.predict(fs_test_vectorized)\n",
+    "accuracy = str(metrics.accuracy_score(y_test, y_pred))\n",
+    "precision = str(metrics.precision_score(y_test, y_pred, average=\"macro\"))\n",
+    "recall = str(metrics.recall_score(y_test, y_pred))\n",
+    "f1 = str(metrics.f1_score(y_test, y_pred, average=\"macro\"))\n",
+    "print(\"Accuracy:\" + accuracy)\n",
+    "print(\"Precision:\" + precision)\n",
+    "print(\"F1:\" + f1)\n",
+    "print(pd.crosstab(y_test, y_pred))\n",
+    "\n",
+    "# Visualization of Confusion Matrix and saving\n",
+    "plt.rcParams['figure.facecolor'] = 'white'\n",
+    "title = f\"Confusion matrix 75_25)\"\n",
+    "disp = plot_confusion_matrix(clf, fs_test_vectorized, y_test,\n",
+    "                             display_labels=[1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "                             cmap=plt.cm.Blues)\n",
+    "disp.ax_.set_title(title)\n",
+    "plt.show()\n",
+    "\n",
+    "title_norm = title + \"_normalize\"\n",
+    "disp_norm = plot_confusion_matrix(clf, fs_test_vectorized, y_test,\n",
+    "                             display_labels=[1.0, 2.0, 3.0, 4.0, 5.0],\n",
+    "                             cmap=plt.cm.Blues,\n",
+    "                             normalize='true')\n",
+    "disp_norm.ax_.set_title(title_norm)\n",
+    "plt.show()\n",
+    "\n",
+    "# Tfidf\n",
+    "# Accuracy:0.5044\n",
+    "# Precision:0.49877848211061393\n",
+    "# F1:0.5005075581374712\n",
+    "\n",
+    "# Count\n",
+    "# Accuracy:0.49352\n",
+    "# Precision:0.48421926835444573\n",
+    "# F1:0.4849920759957114"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# pipeline = Pipeline([\n",
+    "#     ('vect', TfidfVectorizer()),\n",
+    "#     ('select',SelectKBest()),\n",
+    "#     ('clf',LogisticRegression(fit_intercept=True, dual=False, random_state=123, verbose=3))\n",
+    "# ])\n",
+    "pipeline = Pipeline([\n",
+    "    ('vect', TfidfVectorizer()),\n",
+    "    ('clf',LogisticRegression())\n",
+    "])\n",
+    "# parameters = [{\n",
+    "#     'vect__max_df': (0.5, 0.75, 0.8, 0.9, 1.0),\n",
+    "#     'vect__ngram_range': ((1,1), (1,2), (1,3)),\n",
+    "#     'vect__min_df': (2,3,4,5),\n",
+    "#     'vect__norm': ('l1','l2'),\n",
+    "#     'vect__sublinear_tf': (True, False),\n",
+    "#     'select__score_func': (f_classif, f_regression),\n",
+    "#     'select__k': (500,1000,1500,2000,2500,3000,3500,4000,4500,5000),\n",
+    "#     'clf__C': (np.logspace(-4,4,20),1.0),\n",
+    "#     'clf__solver': ('liblinear', 'lbfgs', 'saga'),\n",
+    "#     'clf__max_iter': (100,200,500,1000),\n",
+    "#     'clf__class_weight': (None, 'balanced'),\n",
+    "#     'clf__multi_class': ('ovr', 'multinomial')\n",
+    "# },{\n",
+    "#     'vect': (CountVectorizer(),),\n",
+    "#     'vect__max_df': (0.5, 0.75, 0.8, 0.9, 1.0),\n",
+    "#     'vect__ngram_range': ((1,1), (1,2), (1,3)),\n",
+    "#     'vect__min_df': (2,3,4,5),\n",
+    "#     'vect__norm': ('l1','l2'),\n",
+    "#     'vect__sublinear_tf': (True, False),\n",
+    "#     'select__score_func': (f_classif, f_regression),\n",
+    "#     'select__k': (500,1000,1500,2000,2500,3000,3500,4000,4500,5000),\n",
+    "#     'clf__C': (np.logspace(-4,4,20),1.0),\n",
+    "#     'clf__solver': ('liblinear', 'lbfgs', 'saga'),\n",
+    "#     'clf__max_iter': (100,200,500,1000),\n",
+    "#     'clf__class_weight': (None, 'balanced'),\n",
+    "#     'clf__multi_class': ('ovr', 'multinomial')\n",
+    "# }]\n",
+    "parameters = [{\n",
+    "    'vect__max_df': (0.5, 0.75, 0.8, 0.9, 1.0),\n",
+    "    'vect__ngram_range': ((1,1), (1,2), (1,3)),\n",
+    "    'vect__min_df': (2,3,4,5),\n",
+    "    'vect__norm': ('l1','l2'),\n",
+    "    'vect__sublinear_tf': (True, False),\n",
+    "    'clf__multi_class': ('ovr', 'multinomial')\n",
+    "},{\n",
+    "    'vect': (CountVectorizer(),),\n",
+    "    'vect__max_df': (0.5, 0.75, 0.8, 0.9, 1.0),\n",
+    "    'vect__ngram_range': ((1,1), (1,2), (1,3)),\n",
+    "    'vect__min_df': (2,3,4,5),\n",
+    "    'vect__norm': ('l1','l2'),\n",
+    "    'vect__sublinear_tf': (True, False),\n",
+    "    'clf__multi_class': ('ovr', 'multinomial')\n",
+    "}]\n",
+    "grid_search = GridSearchCV(\n",
+    "    estimator = pipeline,\n",
+    "    param_grid = parameters,\n",
+    "    cv = 5,\n",
+    "    n_jobs = -1,\n",
+    "    verbose = 3\n",
+    ")\n",
+    "\n",
+    "grid_search.fit(X_train, y_train)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "grid_search.best_params_)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "models = []\n",
+    "models.append(('MNB', MultinomialNB()))\n",
+    "models.append(('LR', LogisticRegression(dual=False, random_state=10, multi_class='multinomial')))\n",
+    "models.append(('SDG', SGDClassifier()))\n",
+    "models.append(('SVM', SVC()))\n",
+    "results = []\n",
+    "names = []\n",
+    "# scoring = 'f1_macro'\n",
+    "scoring = 'accuracy'\n",
+    "vectorizer = CountVectorizer(min_df=2 ,max_df=0.8, ngram_range=(1,3))\n",
+    "text_vectorized = vectorizer.fit_transform(text)\n",
+    "# vectorizer_chi2 = SelectKBest(chi2,k=3000)\n",
+    "vectorizer_chi2 = SelectKBest(score_func=f_classif, k=3500)\n",
+    "chi_text_vectorized = vectorizer_chi2.fit_transform(text_vectorized,target)\n",
+    "seed = 7\n",
+    "for name, model in models:\n",
+    "\tkfold = model_selection.KFold(n_splits=5, random_state=seed)\n",
+    "\tcv_results = model_selection.cross_val_score(model, chi_text_vectorized, target, cv=kfold, scoring=scoring)\n",
+    "\tresults.append(cv_results)\n",
+    "\tnames.append(name)\n",
+    "\tmsg = \"%s: %f (%f)\" % (name, cv_results.mean(), cv_results.std())\n",
+    "\tprint(msg)\n",
+    "fig = plt.figure()\n",
+    "fig.suptitle('Algorithm Comparison')\n",
+    "ax = fig.add_subplot(111)\n",
+    "plt.boxplot(results)\n",
+    "ax.set_xticklabels(names)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
