adjust data load

--- a/10_Transition&Cleaning/amazon_movie_topkl.ipynb
+++ b/10_Transition&Cleaning/amazon_movie_topkl.ipynb
@@ -159,7 +159,10 @@
       "46      W      12775\n",
       "47     ON      12669\n",
       "48      V      12649\n",
-      "49    BBC      12309\n"
+      "49    BBC      12309\n",
+      "lowercasing done\n",
+      "stopword removal done\n",
+      "Token Count:  150036351\n"
      ]
     },
     {
